--- a/people.html
+++ b/people.html
@@ -72,7 +72,7 @@
           <img class="circleImage" src="./img/haolong.jpg">
           <p ><strong>Haolong Xiang</strong><br>
             Ph.D. Student</p>
-          <a href="https://researchers.mq.edu.au/en/persons/haolong-xiang">Link to personal website</a>
+          <a href="https://www.linkedin.com/in/haolong-xiang-a256b118b/">Link to personal website</a>
           <br>
           <a href="haolong.xiang@hdr.mq.edu.au">haolong.xiang@hdr.mq.edu.au</a>
         </div>
@@ -81,7 +81,7 @@
           <img class="circleImage" src="./img/xiaoxiao.jpg">
           <p ><strong>Xiaoxiao Chi</strong><br>
             Ph.D. Student</p>
-          <a href="https://researchers.mq.edu.au/en/persons/xiaoxiao-chi">Link to personal website</a>
+          <a href="https://www.linkedin.com/in/xiaoxiao-chi-51618a23b/">Link to personal website</a>
           <br>
           <a href="xiaoxiao.chi@hdr.mq.edu.au">xiaoxiao.chi@hdr.mq.edu.au</a>
         </div>
@@ -92,25 +92,25 @@
             Ph.D. Student</p>
           <a href="https://www.linkedin.com/in/eu-jin-foo/">Link to personal website</a>
           <br>
-          <a href="mailto:someone@nowhere.com">Email address</a>
+          <a href="eujin.foo@hdr.mq.edu.au">eujin.foo@hdr.mq.edu.au</a>
         </div>
 
         <div class="large-4 columns text-center">
           <img class="circleImage" src="./img/Hongyi.jpg">
           <p ><strong>Hongyi Lu</strong><br>
             Ph.D. Student</p>
-          <a href="#">Link to personal website</a>
+          <a href="https://www.linkedin.com/in/hongyi-lu-0b28b8233/">Link to personal website</a>
           <br>
-          <a href="mailto:someone@nowhere.com">Email address</a>
+          <a href="hongyi.lu@hdr.mq.edu.au">hongyi.lu@hdr.mq.edu.au</a>
         </div>
 
         <div class="large-4 columns text-center">
           <img class="circleImage" src="./img/Junyan.jpg">
           <p ><strong>Junyan Li</strong><br>
             MRes + Ph.D. Student</p>
-          <a href="#">Link to personal website</a>
+          <a href="https://www.linkedin.com/in/junyan-li-4992a1255">Link to personal website</a>
           <br>
-          <a href="mailto:someone@nowhere.com">Email address</a>
+          <a href="junyan.li@hdr.mq.edu.au">junyan.li@hdr.mq.edu.au</a>
         </div>
 
       </div> 
@@ -130,16 +130,16 @@
               MRes Student</p>
           <a href="#">Link to personal website</a>
           <br>
-          <a href="mailto:someone@nowhere.com">Email address</a>
+          <a href="guowei.zhang@hdr.mq.edu.au">guowei.zhang@hdr.mq.edu.au</a>
         </div>
          
          <div class="large-4 columns text-center">
           <img class="circleImage" src="./img/Roopasree.jpg">
           <p ><strong>Roopasree Chidurala</strong><br>
             MRes Student</p>
-          <a href="#">Link to personal website</a>
+          <a href="https://www.linkedin.com/in/roopasree-chidurala-20959227a/">Link to personal website</a>
           <br>
-          <a href="mailto:someone@nowhere.com">Email address</a>
+          <a href="roopasree.chidurala@hdr.mq.edu.au">roopasree.chidurala@hdr.mq.edu.au</a>
         </div>
 
         <div class="large-4 columns text-center">
@@ -148,7 +148,7 @@
             MRes Student</p>
           <a href="#">Link to personal website</a>
           <br>
-          <a href="mailto:someone@nowhere.com">Email address</a>
+          <a href="yanran.chen@mq.edu.au">yanran.chen@mq.edu.au</a>
         </div>
       
       </div> 
@@ -166,7 +166,7 @@
           <img class="circleImage" src="./img/rafi.jpg">
           <p><strong>Dr. Rafiullah Khan</strong><br>
               Visiting Fellow | Sessional Academics</p>
-          <a href="https://researchers.mq.edu.au/en/persons/rafiullah-khan">Webpage</a>
+          <a href="https://researchers.mq.edu.au/en/persons/rafiullah-khan">Link to personal website</a>
           <br>
           <a href="rafiullah.khan@mq.edu.au">rafiullah.khan@mq.edu.au</a>
         </div>
@@ -175,7 +175,7 @@
           <img class="circleImage" src="http://placehold.it/200x200">
           <p ><strong>Dr. Mohibullah</strong><br>
             Visiting Fellow</p>
-          <a href="#">Webpage</a>
+          <a href="#">Link to personal website</a>
           <br>
           <a href="mailto:someone@nowhere.com">Email address</a>
         </div>
