--- a/publications.html
+++ b/publications.html
@@ -44,10 +44,18 @@
       <div class="large-12 columns">
           <!-- <div class="callout large primary"> -->
           <div class="callout primary">
-            <a href="https://scholar.google.com.au/citations?user=wbF6HL8AAAAJ&hl=en"> Click to see publications of Dr. Xuyun Zhang</a>
+            <strong>Top three publications of Dr. Xuyun Zhang</strong> <br>
+            1. X. Zhang, L. T. Yang, C. Liu and J. Chen, "A Scalable Two-Phase Top-Down Specialization Approach for Data Anonymization Using MapReduce on Cloud," in IEEE Transactions on Parallel and Distributed Systems, vol. 25, no. 2, pp. 363-373, Feb. 2014, doi: 10.1109/TPDS.2013.48.<br>
+            2.Xu X, Liu Q, Luo Y, Peng K, Zhang X, Meng S, Qi L. A computation offloading method over big data for IoT-enabled cloud-edge computing. Future Generation Computer Systems. 2019 Jun 1;95:522-33. <br>
+            3. He Q, Cui G, Zhang X, Chen F, Deng S, Jin H, Li Y, Yang Y. A game-theoretical approach for user allocation in edge computing environment. IEEE Transactions on Parallel and Distributed Systems. 2019 Sep 3;31(3):515-29.<br>
+            <a href="https://scholar.google.com.au/citations?user=wbF6HL8AAAAJ&hl=en"> Click to see all publications of Dr. Xuyun Zhang</a>
           </div>
           <div class="callout primary">
-            <a href="https://scholar.google.com.au/citations?user=SvilJWEAAAAJ&hl=en&oi=sra"> Click to see publications of Adeem Ali Anwar</a>
+            <strong>Top three publications of Adeem Ali Anwar</strong> <br>
+            1. Perwaiz U, Younas I, Anwar AA. Many-objective BAT algorithm. Plos one. 2020 Jun 11;15(6):e0234625.<br>
+            2. Anwar AA, Younas I. Optimization of many objective pickup and delivery problem with delay time of vehicle using memetic decomposition based evolutionary algorithm. International Journal on Artificial Intelligence Tools. 2020 Feb 28;29(01):2050003. <br>
+            3. Anwar AA, Younas I, Liu G, Beheshti A, Zhang X. A Cricket-Based Selection Hyper-Heuristic for Many-Objective Optimization Problems. InInternational Conference on Advanced Data Mining and Applications 2022 Nov 24 (pp. 310-324). Cham: Springer Nature Switzerland.<br>
+            <a href="https://scholar.google.com.au/citations?user=SvilJWEAAAAJ&hl=en&oi=sra"> Click to see all publications of Adeem Ali Anwar</a>
           </div>
         </div>
       </div>  
